# caliga-bootloader

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  tmp_config.txt
.cargo/: config.toml
book/: book.toml
book/src/: SUMMARY.md  architecture.md  how-does-it-work.md  intrusive_linked_list.md  malloc.md  prefix.md  questions.md  roadmap.md  todo.md
book/src/architecture/: filesystem.md
book/src/roadmap/: stage1.md
meta/: create-gpt.sh  find-ovmf.sh  ovmf-cache.sh  ovmf-compile.sh  qemu-aarch64-virt.sh  qemu-x86_64-uefi.sh
meta/link/: aarch64-unknown-none.ld
meta/mk/: aarch64-unknown-none.mk  config.mk  post-config.mk  pre-config.mk  x86_64-unknown-uefi.mk
meta/target-specs/: aarch64-unknown-none.json
src/: file_system.rs  intrusive_list.rs  lib.rs  main.rs  print_gdt.rs
src/arch/aarch64/: entry.rs  start.S
src/common/: intrusive_list.rs  mod.rs  physical_allocator.rs  slab_allocator.rs
src/developing_modules/: addressing.rs  io.rs  mmio.rs  mod.rs  page_frame_allocator.rs  physical_allocator.rs  slab_allocator.rs
src/developing_modules/aarch64/: mod.rs  system_registers.rs
src/developing_modules/x86_64/: cpuid.rs
src/filesystem/: mod.rs
src/firmware/: mod.rs
src/firmware/uefi/: block_device.rs  entry.rs  file_system.rs
src/io/: io.rs  mmio.rs  mod.rs
