[package]
name = "caligae-bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.17"
uefi = { version = "0.17.0", features = ["exts", "logger"] }
uefi-services = { version = "0.14.0", default-features = false }
